k8s/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app-container
          image: lohsuan/todo-app:latest
          ports:
            - containerPort: 8888
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
