k8s/deploy-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
        - name: todo-ui-container
          image: lohsuan/todo-ui:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
