k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db-clusterip
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: todo-app # the frontend endpoint to connect backend is hardcode on todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: todo-ui-clusterip
spec:
  type: ClusterIP
  selector:
    app: todo-ui
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
