k8s/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app # the frontend endpoint to connect backend is hardcode on todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
