k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db-clusterip
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
