k8s/svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-clusterip
spec:
  type: ClusterIP
  selector:
    app: todo-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
